Fix: slider controls alignment

--- a/index.css
+++ b/index.css
@@ -118,7 +118,7 @@
     color: #ebebeb;
     font-size: 10px;
     font-weight: 700;
-    line-height: 26px;
+    line-height: 37px;
     text-transform: uppercase;
 }
 
